--- a/backend/package.json
+++ b/backend/package.json
@@ -11,15 +11,21 @@
     "build": "sucrase ./src -d ./dist --transforms typescript, imports"
   },
   "dependencies": {
+    "celebrate": "^12.0.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-group-routes": "^1.1.0",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.5"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.30",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.3",
+    "@types/joi": "^14.3.4",
+    "@types/node": "^13.9.8",
+    "@types/validator": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
     "eslint": "^6.8.0",
