--- a/backend/package.json
+++ b/backend/package.json
@@ -8,14 +8,16 @@
   "private": false,
   "scripts": {
     "dev": "nodemon src/server.ts",
-    "build": "sucrase ./src -d ./dist --transforms typescript, imports"
+    "build": "sucrase ./src -d ./dist --transforms typescript, imports",
+    "start": "node src/server.ts"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "celebrate": "^12.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-group-routes": "^1.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.5"
   },
@@ -24,6 +26,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.3",
     "@types/joi": "^14.3.4",
+    "@types/jsonwebtoken": "^8.3.8",
     "@types/node": "^13.9.8",
     "@types/validator": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
@@ -31,6 +34,7 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.2",
     "sequelize-cli": "^5.5.1",
     "sucrase": "^3.12.1",
