--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "sequelize": "^5.21.5"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/bluebird": "^3.5.30",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.3",
