--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,9 @@ DATABASE_PASSWORD=
 DATABASE_NAME=serra_noticias
 DATABASE_HOST=127.0.0.1
 DATABASE_DIALECT=mysql
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=sa-east-1
+
+STORAGE_TYPE=S3
