--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,15 @@
     "start": "node src/server.ts"
   },
   "dependencies": {
+    "aws-sdk": "^2.656.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^12.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.5"
   },
