--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "@types/express": "^4.17.3",
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.3.8",
+    "@types/multer": "^1.4.2",
     "@types/node": "^13.9.8",
     "@types/validator": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
