--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "ckeditor4-react": "^1.1.0",
     "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-animated-css": "^1.2.1",
