DEV home of posts blog

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "ckeditor4-react": "^1.1.0",
+    "markdown-to-jsx": "^6.11.1",
     "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-animated-css": "^1.2.1",
