--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,11 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "ckeditor4-react": "^1.1.0",
-    "markdown-to-jsx": "^6.11.1",
     "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-animated-css": "^1.2.1",
     "react-dom": "^16.13.1",
+    "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
