--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,9 @@
-API_PORT=
-API_KEY=
+API_PORT=3333
+API_KEY=f9bafa7fbd439c511a2d9c67335ab417
 
 DATABASE_USERNAME=
 DATABASE_PASSWORD=
-DATABASE_NAME=serra_noticias
+DATABASE_NAME=cms_news
 DATABASE_HOST=127.0.0.1
 DATABASE_DIALECT=mysql
 
