ADD modified typescript structure of files

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,7 +4,7 @@ API_KEY=f9bafa7fbd439c511a2d9c67335ab417
 DATABASE_USERNAME=
 DATABASE_PASSWORD=
 DATABASE_NAME=cms_news
-DATABASE_HOST=127.0.0.1
+DATABASE_HOST=localhost
 DATABASE_DIALECT=mysql
 
 AWS_ACCESS_KEY_ID=
