--- a/backend/.sequelizerc
+++ b/backend/.sequelizerc
@@ -1,8 +1,8 @@
-const path = require('path');
+import path from 'path';
 
-module.exports = {
-  'config': path.resolve('config', 'database.js'),
-  'models-path': path.resolve('app', 'models'),
-  'seeders-path': path.resolve('database', 'seeders'),
-  'migrations-path': path.resolve('database', 'migrations'),
+export default {
+  'config': path.resolve(__dirname, 'src', 'config', 'database.ts'),
+  'models-path': path.resolve(__dirname, 'src', 'app', 'models'),
+  'seeders-path': path.resolve(__dirname, 'src', 'database', 'seeders'),
+  'migrations-path': path.resolve(__dirname, 'src', 'database', 'migrations')
 };
