--- a/backend/package.json
+++ b/backend/package.json
@@ -2,14 +2,13 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "news paper",
-  "main": "index.js",
+  "main": "src/server.ts",
   "author": "Gabriel Lins",
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "nodemon src/server.ts",
-    "build": "sucrase ./src -d ./dist --transforms typescript,imports",
-    "start": "node dist/src/server.js"
+    "dev": "ts-node-dev --inspect --ignore-watch node_modules src/server.ts",
+    "start": "ts-node src/server.ts"
   },
   "dependencies": {
     "aws-sdk": "^2.656.0",
@@ -22,7 +21,8 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.21.5",
+    "ts-node": "^8.10.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -31,7 +31,9 @@
     "@types/express": "^4.17.3",
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.3.8",
+    "@types/morgan": "^1.9.0",
     "@types/multer": "^1.4.2",
+    "@types/multer-s3": "^2.7.7",
     "@types/node": "^13.9.8",
     "@types/validator": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
@@ -40,9 +42,8 @@
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.2",
     "sequelize-cli": "^5.5.1",
-    "sucrase": "^3.12.1",
+    "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
   }
 }
