--- a/backend/.sequelizerc
+++ b/backend/.sequelizerc
@@ -1,7 +1,7 @@
-import path from 'path';
+const path = require('path');
 
-export default {
-  'config': path.resolve(__dirname, 'src', 'config', 'database.ts'),
+module.exports = {
+  'config': path.resolve(__dirname, 'src', 'config', 'database.js'),
   'models-path': path.resolve(__dirname, 'src', 'app', 'models'),
   'seeders-path': path.resolve(__dirname, 'src', 'database', 'seeders'),
   'migrations-path': path.resolve(__dirname, 'src', 'database', 'migrations')
