--- a/backend/package.json
+++ b/backend/package.json
@@ -2,13 +2,16 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "news paper",
-  "main": "src/server.ts",
+  "main": "dist/server.js",
   "author": "Gabriel Lins",
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "ts-node-dev --inspect --ignore-watch node_modules src/server.ts",
-    "start": "ts-node src/server.ts"
+    "dev:watch": "ts-node-dev --inspect --ignore-watch node_modules src/server.ts",
+    "dev": "ts-node src/server.ts",
+    "start": "pm2 start dist/server.js --name cms_news_api",
+    "start:docker": "pm2-runtime dist/server.js --name cms_news_api",
+    "build": "tsc"
   },
   "dependencies": {
     "aws-sdk": "^2.656.0",
@@ -29,6 +32,7 @@
     "@types/bluebird": "^3.5.30",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.3",
+    "@types/hapi__joi": "^17.1.2",
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.3.8",
     "@types/morgan": "^1.9.0",
