--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,12 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev:watch": "ts-node-dev --inspect --ignore-watch node_modules src/server.ts",
+    "dev:watch": "ts-node-dev -r tsconfig-paths/register --respawn --transpileOnly --inspect --ignore-watch node_modules src/server.ts",
     "dev": "ts-node src/server.ts",
     "start": "pm2 start dist/server.js --name cms_news_api",
     "start:docker": "pm2-runtime dist/server.js --name cms_news_api",
-    "build": "tsc"
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
+    "test": "jest"
   },
   "dependencies": {
     "aws-sdk": "^2.656.0",
@@ -28,11 +29,17 @@
     "ts-node": "^8.10.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.3",
+    "@babel/core": "^7.10.3",
+    "@babel/node": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-typescript": "^7.10.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/bluebird": "^3.5.30",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.3",
     "@types/hapi__joi": "^17.1.2",
+    "@types/jest": "^26.0.0",
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.3.8",
     "@types/morgan": "^1.9.0",
@@ -42,12 +49,16 @@
     "@types/validator": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
+    "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
+    "jest": "^26.0.1",
     "morgan": "^1.10.0",
     "sequelize-cli": "^5.5.1",
+    "ts-jest": "^26.1.0",
     "ts-node-dev": "^1.0.0-pre.44",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.3"
   }
 }
